# Noms

./: .env.local.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dioxus.toml  Dockerfile  README.md  amplify.yml  docker-compose.yml  entrypoint.sh  justfile  package.json  railway.toml
.opencode/: brief.md  develop-context.md
.sqlx/: query-037b40d2795a04517301f859f62309494b72406116f36941a5b74bf477ad7b70.json  query-07e7518cc4c00dcc744e6e5d1ac29576f5d5a578281dbd759520a6ba981b0784.json  query-08e109e938c385e8d66e7fe86c950e438d26ed5bb2ce29811311f805f679427d.json  query-0b1491df084cc8f00a3840603a4199c7a0031e312b5bde96e5a753378b7b3bbf.json  query-0e689293a71e6b0035c321beff1905175a1cb65f2e14daf4cb93c993dbb0ceea.json  query-141f41976c3973e8fdc384a1e4a57bfc8a039b91a9534a4541adb30088f46266.json  query-158493df500113111b8787bb67064190aed219d3f2dd35fda12fe21d37b75880.json  query-1c56da9b70da0ef7eff305162e984f3f0f34b883ff7a9128b5931280cbbf38b6.json  query-1f2e39652a3b8099d772970ac6b829e46fea650f7da286a5db67da772c88be30.json  query-20859260186d4ec82bab3b8a3263737a41f7a5ac9e574fe0af3713c4e1b4ffff.json  query-2d8122a78f182c156dc17609ee6f1e5e57cd4ac9cba4aacc13067b1014b20275.json  query-2e4a093f98b0bb38625f5607906c4c2e6b20190d25da917377ab852c20541854.json  query-31afcc5685507e63e442824e80c0e3c1a8b8df40726d03d1aa009387d0740ed3.json  query-32cc246e0a71ff71763689f7304f2f67e923b68a57905d37b02764e545d814e1.json  query-3311b212888904bf26fe434a844dc14a04cc3af4d3b681e2de7fa58346ac1602.json  query-37d076e9984d0dc579298d90ab9abb87f25aa7abe0930396fff391a1eb92b3db.json  query-48ad1ce42c3af115fc76bc039a9d724327dd25c11f6c2e1d3165180784b90f5c.json  query-4cbc30175a8bcfc497f1f6c9c84739501e65900ab1a18cc44ffa5e238b2d78ce.json  query-4cd4975b44fd64d5b0d8cadeb4d1f8b33e104b5f1a5e92fe715e0635a8f4e3f2.json  query-50850d45e820c7bb58d3eff207bc74bd13b7d89905c0328b03ad27c731071066.json  query-57b7e798e08a7d3108c043099165874133bed501ff8d5666fe1340c84904abb2.json  query-5aa727e932b7fb0e65e0ae0fa307179f31ef481a0c157e2e5fcbd63abdc807b3.json  query-61750ec20486a0c12ac48089d9e3658de124f4714e65b3b36e78290abe60f224.json  query-62eec852a8bdbb01244b84feca0fb8c666599b4ab8c46fbb03cfcaf71c9d2f04.json  query-68820ebc0edc15fa01b640c6e11f66ff0e104f4b0dc79f62a57eb12c7394a7fd.json  query-6a492204735d4221537e884d30f2371c385a6d7a41a5f5bbbb8ca3c550b5d212.json  query-6b2a7fb8414d44ee7f8eea0f8f242aa8c07331833cb2af2e4be96ec2b9c9ef22.json  query-6b54b848f24d6c2f287dd22f93069d8b8a6052ede599d5269983683537bb59b1.json  query-6f6297229af6abc575d0013d628899d99ca81868adcadf0dab71d87db39d48bb.json  query-7694b242af53d75f6523b4c9e4cd40971c3d37c6f88a17019597fdf29c289c99.json  query-78c61588074464b60ffdc1861b94c25d32eee6cdad92f6bd7532b44b9ec2c23c.json  query-7ce33334f1764b0baf78e18ac1433723db787ffe6020aa625c943a1857ab3d8e.json  query-8278aa3bde5f20afcae80c91eda5e10329248cc24caa6a9e6ed7a28808ce1a32.json  query-880b076ba84c968cce5b614056b48bde370b240eea0e725bfcaa86b9ab36d278.json  query-89277e8fcbea7cd4518dcf20aef5bb9b7a254432bacfc92f23333d881d9517c1.json  query-8bbac044f9540c62eaefa8a0dbdb512398a112680f3c6c7d5d78a208feb83480.json  query-902a1288005707ea0f33bf9347fd2d57ded380f634aea826761bcd7d8bea8c1d.json  (+29 more)
noms/: .env  (+3 more)
(+162 files in other folders)
