[package]
name = "noms"
version = "0.1.0"
authors = ["samko_rba <samko@ritchiebros.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
tracing = "0.1"

# Server-only — never compiled into the WASM client
sqlx             = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"], optional = true }
aws-sdk-s3       = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["json"], optional = true }
web-sys = { version = "0.3.98", features = ["Window", "Storage"] }

[features]
default = ["web"]
web     = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
server  = [
    "dioxus/server",
    "sqlx",
    "aws-sdk-s3",
    "tracing-subscriber",
]

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "warn"
