[package]
name = "noms"
version = "0.1.0"
authors = ["samko_rba <samko@ritchiebros.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
tracing = "0.1"

# Server-only — never compiled into the WASM client
sqlx             = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], optional = true }
aws-sdk-s3       = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["json"], optional = true }
oauth2           = { version = "5", optional = true }
jsonwebtoken     = { version = "9", optional = true }
axum             = { version = "0.8", optional = true }
axum-extra       = { version = "0.10", features = ["cookie"], optional = true }
reqwest          = { version = "0.12", features = ["json"], optional = true }
uuid             = { version = "1", features = ["v4", "serde", "js"] }
serde            = { version = "1", features = ["derive"] }
percent-encoding = "2"
serde_json       = { version = "1", optional = true }
time             = { version = "0.3", optional = true }
cookie           = { version = "0.18", optional = true }
chrono           = { version = "0.4", features = ["serde"] }
tokio            = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
unicode-normalization = { version = "0.1", optional = true }
 web-sys = { version = "0.3.98", features = ["Window", "Storage", "Location"] }
gloo-net = { version = "0.6", features = ["http"] }

[features]
default = ["web"]
web     = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
server  = [
    "dioxus/server",
    "sqlx",
    "aws-sdk-s3",
    "tracing-subscriber",
    "oauth2",
    "jsonwebtoken",
    "axum",
    "axum-extra",
    "reqwest",
    "serde_json",
    "time",
    "cookie",
    "tokio",
    "unicode-normalization",
]

[dev-dependencies]
pgtemp = "0.7"
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "warn"
